-------------------------------------------------------------------------------
Changes in version 0.2

- If $NOCHROOT is set, twoftpd-xfer will not chroot on entry.
-------------------------------------------------------------------------------