@@ -15,13 +15,180 @@
 
 int do_chroot;
 
-static int binary_flag = 0;
+/* Temporary buffers */
 static char buffer[BUFSIZE];
+static struct stat statbuf;
 
+/* State variables */
+static int binary_flag = 0;
 static int socket_fd = -1;
 static struct sockaddr_in socket_addr;
 static struct sockaddr_in remote_addr;
+static enum { NONE, PASV, PORT } connect_mode = NONE;
 
+/*****************************************************************************/
+static int accept_connection(void)
+{
+  int fd;
+  int size;
+  fd_set fds;
+  struct timeval to;
+  
+  size = sizeof remote_addr;
+  FD_ZERO(&fds);
+  FD_SET(socket_fd, &fds);
+  to = timeout;
+  if (select(socket_fd+1, &fds, 0, 0, &to) == 0) {
+    respond(425, 1, "Timed out waiting for the connection.");
+    return -1;
+  }
+  if ((fd = accept(socket_fd, (struct sockaddr*)&remote_addr, &size)) == -1)
+    respond(425, 1, "Could not accept the connection.");
+  else {
+    close(socket_fd);
+    socket_fd = -1;
+    connect_mode = NONE;
+  }
+  return fd;
+}
+
+static int start_connection(void)
+{
+  int fd;
+  if ((fd = socket(PF_INET, SOCK_STREAM, IPPROTO_IP)) == -1) return -1;
+  if (connect(fd, (struct sockaddr*)&remote_addr, sizeof remote_addr)) {
+    respond(425, 1, "Could not build the connection.");
+    close(fd);
+    return -1;
+  }
+  return fd;
+}
+
+static int make_connection(void)
+{
+  if (connect_mode == NONE) {
+    respond(425, 1, "No PORT or PASV commands have been issued.");
+  }
+  else {
+    respond(150, 1, "Opening data connection.");
+    return (connect_mode == PASV) ? accept_connection() : start_connection();
+  }
+  return -1;
+}
+
+static int pushd(const char* path)
+{
+  int cwd;
+  if ((cwd = open(".", O_RDONLY)) == -1) return -1;
+  if (chdir(path) == -1) {
+    close(cwd);
+    return -1;
+  }
+  return cwd;
+}
+
+static int sendfd(int in, int out)
+{
+  ssize_t rd;
+  ssize_t wr;
+  size_t offset;
+  
+  for (;;) {
+    rd = read(in, buffer, sizeof buffer);
+    if (rd == -1) {
+      close(out);
+      respond(451, 1, "Read failed.");
+      return 0;
+    }
+    if (rd == 0) break;
+    for (offset = 0; rd; offset += wr, rd -= wr) {
+      wr = write(out, buffer + offset, rd);
+      if (wr == -1) {
+	close(out);
+	respond(426, 1, "Write failed.");
+	return 0;
+      }
+    }
+  }
+  return 1;
+}
+
+static int recvfd(int in, int out)
+{
+  ssize_t rd;
+  ssize_t wr;
+  size_t offset;
+  
+  for (;;) {
+    rd = read(in, buffer, sizeof buffer);
+    if (rd == -1) {
+      close(out);
+      respond(426, 1, "Read from socket failed.");
+      return 0;
+    }
+    if (rd == 0) break;
+    for (offset = 0; rd; offset += wr, rd -= wr) {
+      wr = write(out, buffer + offset, rd);
+      if (wr == -1) {
+	close(out);
+	respond(451, 1, "Write failed.");
+	return 0;
+      }
+    }
+  }
+  return 1;
+}
+
+static unsigned char strtoc(const char* str, char** end)
+{
+  long tmp;
+  tmp = strtol(str, end, 10);
+  if (tmp < 0 || tmp > 0xff) *end = 0;
+  return tmp;
+}
+
+static int parse_addr(const char* str, struct sockaddr_in* addr)
+{
+  char* end;
+  unsigned long host;
+  unsigned short port;
+  
+  host = strtoc(str, &end) << 24; if (*end != ',') return 0;
+  host |= strtoc(end+1, &end) << 16; if (*end != ',') return 0;
+  host |= strtoc(end+1, &end) << 8; if (*end != ',') return 0;
+  host |= strtoc(end+1, &end); if (*end != ',') return 0;
+  port = strtoc(end+1, &end) << 8; if (*end != ',') return 0;
+  port |= strtoc(end+1, &end); if (*end != 0) return 0;
+  memset(addr, 0, sizeof *addr);
+  addr->sin_family = AF_INET;
+  addr->sin_addr.s_addr = htonl(host);
+  addr->sin_port = htons(port);
+  return 1;
+}
+
+static int make_socket(void)
+{
+  int size;
+  
+  size = sizeof *&socket_addr;
+  if (socket_fd != -1) close(socket_fd);
+  if ((socket_fd = socket(PF_INET, SOCK_STREAM, IPPROTO_IP)) != -1) {
+    memset(&socket_addr, 0, sizeof socket_addr);
+    socket_addr.sin_family = AF_INET;
+    inet_aton(getenv("TCPLOCALIP"), &socket_addr.sin_addr);
+    if (!bind(socket_fd, (struct sockaddr*)&socket_addr, sizeof socket_addr) &&
+	!listen(socket_fd, 1) &&
+	!getsockname(socket_fd, (struct sockaddr*)&socket_addr, &size))
+      return 1;
+    else {
+      close(socket_fd);
+      socket_fd = -1;
+    }
+  }
+  return 0;
+}
+
+/*****************************************************************************/
 static int handle_pass(void)
 {
   return respond(202, 1, "Access has already been granted.");
@@ -82,10 +249,18 @@ static int handle_cdup(void)
 
 static int handle_size(void)
 {
-  struct stat st;
-  if (stat(req_param, &st) == -1)
+  if (stat(req_param, &statbuf) == -1)
     return respond(550, 1, "Could not determine file size.");
-  sprintf(buffer, "%lu", st.st_size);
+  sprintf(buffer, "%lu", statbuf.st_size);
+  return respond(213, 1, buffer);
+}
+
+static int handle_mdtm(void)
+{
+  if (stat(req_param, &statbuf) == -1)
+    return respond(550, 1, "Could not determine file time.");
+  strftime(buffer, sizeof buffer, "%Y%m%d%H%M%S",
+	   gmtime(&statbuf.st_mtime));
   return respond(213, 1, buffer);
 }
 
@@ -93,29 +268,9 @@ static int handle_pasv(void)
 {
   unsigned long addr;
   unsigned short port;
-  int size;
   
-  if (socket_fd != -1) close(socket_fd);
-  socket_fd = socket(PF_INET, SOCK_STREAM, IPPROTO_IP);
-  if (socket_fd == -1) return respond(550, 1, "Could not create socket.");
-  memset(&socket_addr, 0, sizeof socket_addr);
-  socket_addr.sin_family = AF_INET;
-  inet_aton(getenv("TCPLOCALIP"), &socket_addr.sin_addr);
-  if (bind(socket_fd, (struct sockaddr*)&socket_addr, sizeof socket_addr)) {
-    close(socket_fd);
-    return respond(550, 1, "Could not set up socket.");
-  }
-  if (listen(socket_fd, 1)) {
-    close(socket_fd);
-    socket_fd = -1;
-    return respond(550, 1, "Could not listen to socket.");
-  }
-  size = sizeof socket_addr;
-  if (getsockname(socket_fd, (struct sockaddr*)&socket_addr, &size)) {
-    close(socket_fd);
-    socket_fd = -1;
-    return respond(550, 1, "Could not determine local port number.");
-  }
+  if (!make_socket()) return respond(550, 1, "Could not create socket.");
+  connect_mode = PASV;
   addr = ntohl(socket_addr.sin_addr.s_addr);
   port = ntohs(socket_addr.sin_port);
   sprintf(buffer, "=%lu,%lu,%lu,%lu,%u,%u",
@@ -124,36 +279,12 @@ static int handle_pasv(void)
   return respond(227, 1, buffer);
 }
 
-static int pushd(const char* path)
+static int handle_port(void)
 {
-  int cwd;
-  if ((cwd = open(".", O_RDONLY)) == -1) return -1;
-  if (chdir(path) == -1) {
-    close(cwd);
-    return -1;
-  }
-  return cwd;
-}
-
-static int accept_connection(void)
-{
-  int fd;
-  int size;
-  fd_set fds;
-  struct timeval to;
-  
-  respond(150, 1, "Opening data connection.");
-  size = sizeof remote_addr;
-  FD_ZERO(&fds);
-  FD_SET(socket_fd, &fds);
-  to = timeout;
-  if (select(socket_fd+1, &fds, 0, 0, &to) == 0) {
-    respond(425, 1, "Timed out waiting for the connection.");
-    return -1;
-  }
-  if ((fd = accept(socket_fd, (struct sockaddr*)&remote_addr, &size)) == -1)
-    respond(425, 1, "Could not accept the connection.");
-  return fd;
+  if (!parse_addr(req_param, &remote_addr))
+    return respond(501, 1, "Can't parse your PORT address.");
+  connect_mode = PORT;
+  return respond(200, 1, "PORT OK.");
 }
 
 static int handle_list(void)
@@ -161,7 +292,6 @@ static int handle_list(void)
   int fd;
   int cwd;
   const char** entries;
-  struct stat sb;
 
   if (req_param) {
     if ((cwd = pushd(req_param)) == -1)
@@ -174,11 +304,11 @@ static int handle_list(void)
     return respond(550, 1, "Could not list directory.");
   }
 
-  if ((fd = accept_connection()) == -1) return 1;
+  if ((fd = make_connection()) == -1) return 1;
 
   while (*entries) {
-    if (stat(*entries, &sb) != -1) {
-      format_stat(&sb, *entries, buffer);
+    if (stat(*entries, &statbuf) != -1) {
+      format_stat(&statbuf, *entries, buffer);
       write(fd, buffer, strlen(buffer));
     }
     ++entries;
@@ -196,7 +326,7 @@ static int handle_nlst(void)
   if ((entries = listdir(req_param ? req_param : ".")) == 0)
     return respond(550, 1, "Could not list directory.");
 
-  if ((fd = accept_connection()) == -1) return 1;
+  if ((fd = make_connection()) == -1) return 1;
 
   while (*entries) {
     write(fd, *entries, strlen(*entries));
@@ -207,47 +337,65 @@ static int handle_nlst(void)
   return respond(226, 1, "Transfer complete.");
 }
 
-static int sendfd(int in, int out, size_t* total)
-{
-  ssize_t rd;
-  ssize_t wr;
-  size_t offset;
-  
-  *total = 0;
-  for (;;) {
-    rd = read(in, buffer, sizeof buffer);
-    if (rd == -1) {
-      close(out);
-      respond(451, 1, "Read failed.");
-      return 0;
-    }
-    if (rd == 0) break;
-    for (offset = 0; rd; offset += wr, rd -= wr, *total += wr) {
-      wr = write(out, buffer + offset, rd);
-      if (wr == -1) {
-	close(out);
-	respond(426, 1, "Write failed.");
-	return 0;
-      }
-    }
-  }
-  return 1;
-}
-
 static int handle_retr(void)
 {
   int in;
   int out;
-  size_t bytes;
-  
   if ((in = open(req_param, O_RDONLY)) == -1)
     return respond(550, 1, "Could not open input file.");
-  if ((out = accept_connection()) == -1) return 1;
-  if (!sendfd(in, out, &bytes)) return 1;
+  if ((out = make_connection()) == -1) return 1;
+  if (!sendfd(in, out)) return 1;
   close(out);
   return respond(226, 1, "File sent successfully.");
 }
-    
+
+static int handle_stor(void)
+{
+  int in;
+  int out;
+  if ((out = open(req_param, O_WRONLY | O_CREAT | O_TRUNC, 0666)) == -1)
+    return respond(452, 1, "Could not open output file.");
+  if ((in = make_connection()) == -1) return 1;
+  if (!recvfd(in, out)) return 1;
+  close(in);
+  close(out);
+  return respond(226, 1, "File received successfully.");
+}
+
+static int handle_appe(void)
+{
+  int in;
+  int out;
+  if ((out = open(req_param, O_WRONLY | O_APPEND, 0666)) == -1)
+    return respond(452, 1, "Could not open output file.");
+  if ((in = make_connection()) == -1) return 1;
+  if (!recvfd(in, out)) return 1;
+  close(in);
+  close(out);
+  return respond(226, 1, "File received successfully.");
+}
+
+static int handle_mkd(void)
+{
+  if (mkdir(req_param, 0777))
+    return respond(550, 1, "Could not create directory.");
+  return respond(250, 1, "Directory created successfully.");
+}
+
+static int handle_rmd(void)
+{
+  if (rmdir(req_param))
+    return respond(550, 1, "Could not remove directory.");
+  return respond(250, 1, "Directory removed successfully.");
+}
+
+static int handle_dele(void)
+{
+  if (unlink(req_param))
+    return respond(550, 1, "Could not remove file.");
+  return respond(250, 1, "File removed successfully.");
+}
+
 verb verbs[] = {
   { "PASS", 0,           handle_pass },
   { "ACCT", 0,           handle_pass },
@@ -255,16 +403,26 @@ verb verbs[] = {
   { "STRU", 0,           handle_stru },
   { "MODE", 0,           handle_mode },
   { "CWD",  0,           handle_cwd },
-  { "XCWD", 0,           handle_cwd },
   { "PWD",  handle_pwd,  0 },
-  { "XPWD", handle_pwd,  0 },
   { "CDUP", handle_cdup, 0 },
-  { "XCUP", handle_cdup, 0 },
   { "PASV", handle_pasv, 0 },
+  { "PORT", 0,           handle_port },
   { "LIST", handle_list, handle_list },
   { "NLST", handle_nlst, handle_nlst },
-  { "RETR", 0,           handle_retr },
   { "SIZE", 0,           handle_size },
+  { "MDTM", 0,           handle_mdtm },
+  { "RETR", 0,           handle_retr },
+  { "STOR", 0,           handle_stor },
+  { "APPE", 0,           handle_appe },
+  { "MKD",  0,           handle_mkd  },
+  { "RMD",  0,           handle_rmd  },
+  { "DELE", 0,           handle_dele },
+  /* Compatibility verbs as defined by RFC1123 */
+  { "XCWD", 0,           handle_cwd },
+  { "XPWD", handle_pwd,  0 },
+  { "XCUP", handle_cdup, 0 },
+  { "XMKD", 0,           handle_mkd  },
+  { "XRMD", 0,           handle_rmd  },
   { 0, 0, 0 }
 };
 
